@@ -88,6 +88,7 @@ all the sections are concatenated, for ease of searching. The sections are as
 follows:
 <pre>
   pcre              this document
+  pcre-config       show PCRE installation configuration information
   pcreapi           details of PCRE's native C API
   pcrebuild         options for building PCRE
   pcrecallout       details of the callout feature
@@ -248,12 +249,12 @@ Cambridge CB2 3QH, England.
 </P>
 <P>
 Putting an actual email address here seems to have been a spam magnet, so I've
-taken it away. If you want to email me, use my initial and surname, separated
-by a dot, at the domain ucs.cam.ac.uk.
+taken it away. If you want to email me, use my two initials, followed by the
+two digits 10, at the domain cam.ac.uk.
 </P>
 <br><a name="SEC6" href="#TOC1">REVISION</a><br>
 <P>
-Last updated: 06 March 2007
+Last updated: 18 April 2007
 <br>
 Copyright &copy; 1997-2007 University of Cambridge.
 <br>
